update theme name and from which derived information

--- a/templates/base.html
+++ b/templates/base.html
@@ -85,7 +85,7 @@
                 Proudly powered by <a href="http://alexis.notmyidea.org/pelican/">pelican</a>, which takes great advantages of <a href="http://python.org">python</a>.
                 </address><!-- /#about -->
 
-                <p>The theme is «notmyidea-cms», a modified version of «notmyidea», the default theme.</p>
+                <p>The theme is «konoha», a modified version of «notmyidea-cms».</p>
         </footer><!-- /#footer -->
 </body>
 </html>
