--- a/templates/base.html
+++ b/templates/base.html
@@ -67,7 +67,6 @@
                 <div class="widget social">
                         <h2>Social</h2>
                         <ul>
-                            <li><a href="{{ SITEURL }}/{{ FEED }}" rel="alternate">atom feed</a></li>
                             {% if FEED_RSS %}
                             <li><a href="{{ SITEURL }}/{{ FEED_RSS }}" rel="alternate">rss feed</a></li>
                             {% endif %}
@@ -81,8 +80,9 @@
         </aside><!-- /#sidebar -->
 
         <footer id="footer" class="body">
-                <address id="about" class="vcard body">
-                Proudly powered by <a href="http://alexis.notmyidea.org/pelican/">pelican</a>, which takes great advantages of <a href="http://python.org">python</a>.
+          <address id="about" class="vcard body">
+	    <img src="/theme/images/cc-by-nc-sa.png"/> © 2014, {{AUTHOR}} - Content licensed under
+	    <a href="http://creativecommons.org/licenses/by-nc-sa/4.0/">Creative Commons Attribution 4.0 International License</a>, except where indicated otherwise.
                 </address><!-- /#about -->
 
                 <p>The theme is «konoha», a modified version of «notmyidea-cms».</p>
