--- a/static/css/main.css
+++ b/static/css/main.css
@@ -17,7 +17,7 @@
 body {
     background: #F5F4EF url('../images/bg.png');
     color: #000305;
-    font-size: 87.5%; /* Base font size: 14px */
+    font-size: 16px; /* Base font size: 14px */
     font-family: 'Sorts Mill Goudy', Trebuchet, 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     font-style: italic;
     line-height: 1.429;
