--- a/static/css/main.css
+++ b/static/css/main.css
@@ -19,7 +19,7 @@ body {
     color: #000305;
     font-size: 16px; /* Base font size: 14px */
     font-family: 'Sorts Mill Goudy', Trebuchet, 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
-    font-style: italic;
+    font-style: normal;
     line-height: 1.429;
     margin: 0;
     padding: 0;
