--- a/static/css/pygment.css
+++ b/static/css/pygment.css
@@ -1,205 +1,70 @@
-.hll {
-background-color:#FFFFCC;
-}
-.c {
-color:#408090;
-font-style:italic;
-}
-.err {
-border:1px solid #FF0000;
-}
-.k {
-color:#007020;
-font-weight:bold;
-}
-.o {
-color:#666666;
-}
-.cm {
-color:#408090;
-font-style:italic;
-}
-.cp {
-color:#007020;
-}
-.c1 {
-color:#408090;
-font-style:italic;
-}
-.cs {
-background-color:#FFF0F0;
-color:#408090;
-}
-.gd {
-color:#A00000;
-}
-.ge {
-font-style:italic;
-}
-.gr {
-color:#FF0000;
-}
-.gh {
-color:#000080;
-font-weight:bold;
-}
-.gi {
-color:#00A000;
-}
-.go {
-color:#303030;
-}
-.gp {
-color:#C65D09;
-font-weight:bold;
-}
-.gs {
-font-weight:bold;
-}
-.gu {
-color:#800080;
-font-weight:bold;
-}
-.gt {
-color:#0040D0;
-}
-.kc {
-color:#007020;
-font-weight:bold;
-}
-.kd {
-color:#007020;
-font-weight:bold;
-}
-.kn {
-color:#007020;
-font-weight:bold;
-}
-.kp {
-color:#007020;
-}
-.kr {
-color:#007020;
-font-weight:bold;
-}
-.kt {
-color:#902000;
-}
-.m {
-color:#208050;
-}
-.s {
-color:#4070A0;
-}
-.na {
-color:#4070A0;
-}
-.nb {
-color:#007020;
-}
-.nc {
-color:#0E84B5;
-font-weight:bold;
-}
-.no {
-color:#60ADD5;
-}
-.nd {
-color:#555555;
-font-weight:bold;
-}
-.ni {
-color:#D55537;
-font-weight:bold;
-}
-.ne {
-color:#007020;
-}
-.nf {
-color:#06287E;
-}
-.nl {
-color:#002070;
-font-weight:bold;
-}
-.nn {
-color:#0E84B5;
-font-weight:bold;
-}
-.nt {
-color:#062873;
-font-weight:bold;
-}
-.nv {
-color:#BB60D5;
-}
-.ow {
-color:#007020;
-font-weight:bold;
-}
-.w {
-color:#BBBBBB;
-}
-.mf {
-color:#208050;
-}
-.mh {
-color:#208050;
-}
-.mi {
-color:#208050;
-}
-.mo {
-color:#208050;
-}
-.sb {
-color:#4070A0;
-}
-.sc {
-color:#4070A0;
-}
-.sd {
-color:#4070A0;
-font-style:italic;
-}
-.s2 {
-color:#4070A0;
-}
-.se {
-color:#4070A0;
-font-weight:bold;
-}
-.sh {
-color:#4070A0;
-}
-.si {
-color:#70A0D0;
-font-style:italic;
-}
-.sx {
-color:#C65D09;
-}
-.sr {
-color:#235388;
-}
-.s1 {
-color:#4070A0;
-}
-.ss {
-color:#517918;
-}
-.bp {
-color:#007020;
-}
-.vc {
-color:#BB60D5;
-}
-.vg {
-color:#BB60D5;
-}
-.vi {
-color:#BB60D5;
-}
-.il {
-color:#208050;
-}
+.highlight pre .hll { background-color: #ffffcc }
+.highlight pre, .highlighttable pre { background: #fdf6e3; color: #657b83 }
+.highlight pre .c { color: #93a1a1; font-style: italic } /* Comment */
+.highlight pre .err { color: #dc322f } /* Error */
+.highlight pre .g { color: #657b83 } /* Generic */
+.highlight pre .k { color: #859900 } /* Keyword */
+.highlight pre .l { color: #657b83 } /* Literal */
+.highlight pre .n { color: #586e75 } /* Name */
+.highlight pre .o { color: #657b83 } /* Operator */
+.highlight pre .x { color: #657b83 } /* Other */
+.highlight pre .p { color: #657b83 } /* Punctuation */
+.highlight pre .cm { color: #93a1a1; font-style: italic } /* Comment.Multiline */
+.highlight pre .cp { color: #93a1a1; font-style: italic } /* Comment.Preproc */
+.highlight pre .c1 { color: #93a1a1; font-style: italic } /* Comment.Single */
+.highlight pre .cs { color: #93a1a1; font-style: italic } /* Comment.Special */
+.highlight pre .gd { color: #657b83 } /* Generic.Deleted */
+.highlight pre .ge { color: #657b83 } /* Generic.Emph */
+.highlight pre .gr { color: #657b83 } /* Generic.Error */
+.highlight pre .gh { color: #657b83 } /* Generic.Heading */
+.highlight pre .gi { color: #657b83 } /* Generic.Inserted */
+.highlight pre .go { color: #657b83 } /* Generic.Output */
+.highlight pre .gp { color: #657b83 } /* Generic.Prompt */
+.highlight pre .gs { color: #657b83 } /* Generic.Strong */
+.highlight pre .gu { color: #657b83 } /* Generic.Subheading */
+.highlight pre .gt { color: #657b83 } /* Generic.Traceback */
+.highlight pre .kc { color: #859900 } /* Keyword.Constant */
+.highlight pre .kd { color: #859900 } /* Keyword.Declaration */
+.highlight pre .kn { color: #cb4b16 } /* Keyword.Namespace */
+.highlight pre .kp { color: #cb4b16 } /* Keyword.Pseudo */
+.highlight pre .kr { color: #859900 } /* Keyword.Reserved */
+.highlight pre .kt { color: #859900 } /* Keyword.Type */
+.highlight pre .ld { color: #657b83 } /* Literal.Date */
+.highlight pre .m { color: #2aa198 } /* Literal.Number */
+.highlight pre .s { color: #2aa198 } /* Literal.String */
+.highlight pre .na { color: #657b83 } /* Name.Attribute */
+.highlight pre .nb { color: #268bd2 } /* Name.Builtin */
+.highlight pre .nc { color: #268bd2 } /* Name.Class */
+.highlight pre .no { color: #b58900 } /* Name.Constant */
+.highlight pre .nd { color: #cb4b16 } /* Name.Decorator */
+.highlight pre .ni { color: #cb4b16 } /* Name.Entity */
+.highlight pre .ne { color: #cb4b16 } /* Name.Exception */
+.highlight pre .nf { color: #268bd2 } /* Name.Function */
+.highlight pre .nl { color: #657b83 } /* Name.Label */
+.highlight pre .nn { color: #b58900 } /* Name.Namespace */
+.highlight pre .nx { color: #657b83 } /* Name.Other */
+.highlight pre .py { color: #268bd2 } /* Name.Property */
+.highlight pre .nt { color: #859900 } /* Name.Tag */
+.highlight pre .nv { color: #cb4b16 } /* Name.Variable */
+.highlight pre .ow { color: #859900 } /* Operator.Word */
+.highlight pre .w { color: #fdf6e3 } /* Text.Whitespace */
+.highlight pre .mf { color: #2aa198 } /* Literal.Number.Float */
+.highlight pre .mh { color: #2aa198 } /* Literal.Number.Hex */
+.highlight pre .mi { color: #2aa198 } /* Literal.Number.Integer */
+.highlight pre .mo { color: #2aa198 } /* Literal.Number.Oct */
+.highlight pre .sb { color: #2aa198 } /* Literal.String.Backtick */
+.highlight pre .sc { color: #2aa198 } /* Literal.String.Char */
+.highlight pre .sd { color: #2aa198 } /* Literal.String.Doc */
+.highlight pre .s2 { color: #2aa198 } /* Literal.String.Double */
+.highlight pre .se { color: #cb4b16 } /* Literal.String.Escape */
+.highlight pre .sh { color: #2aa198 } /* Literal.String.Heredoc */
+.highlight pre .si { color: #cb4b16 } /* Literal.String.Interpol */
+.highlight pre .sx { color: #2aa198 } /* Literal.String.Other */
+.highlight pre .sr { color: #2aa198 } /* Literal.String.Regex */
+.highlight pre .s1 { color: #2aa198 } /* Literal.String.Single */
+.highlight pre .ss { color: #2aa198 } /* Literal.String.Symbol */
+.highlight pre .bp { color: #268bd2; font-weight: bold } /* Name.Builtin.Pseudo */
+.highlight pre .vc { color: #268bd2 } /* Name.Variable.Class */
+.highlight pre .vg { color: #268bd2 } /* Name.Variable.Global */
+.highlight pre .vi { color: #268bd2 } /* Name.Variable.Instance */
+.highlight pre .il { color: #2aa198 } /* Literal.Number.Integer.Long */
